Closed
Bug 1219300
Opened 10 years ago
Closed 10 years ago
Intermittent object-fit-contain-webm-001.html | application crashed [@ mozilla::Maybe<bool>::emplace<bool>(bool &&)][unknown top frame] after Assertion failure: !mIsSome, at Maybe.h:385
Categories
(Core :: Audio/Video: Playback, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla45
People
(Reporter: KWierso, Assigned: bechen)
Details
(Keywords: intermittent-failure)
Attachments
(1 file, 1 obsolete file)
|
1.40 KB,
patch
|
bechen
:
review+
ritu
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Comment 5•10 years ago
|
||
https://treeherder.mozilla.org/logviewer.html#?repo=b2g-inbound&job_id=3211888
18:30:00 INFO - REFTEST TEST-START | file:///C:/slave/test/build/tests/reftest/tests/layout/reftests/webm-video/object-fit-contain-webm-001.html
108351
18:30:00 INFO - REFTEST TEST-LOAD | file:///C:/slave/test/build/tests/reftest/tests/layout/reftests/webm-video/object-fit-contain-webm-001.html | 8523 / 12874 (66%)
108352
18:30:00 INFO - ++DOMWINDOW == 66 (0C30BC00) [pid = 3556] [serial = 25179] [outer = 13B7B780]
108353
18:30:01 INFO - [3556] WARNING: NS_ENSURE_TRUE(SUCCEEDED(hr)) failed: file c:/builds/moz2_slave/b2g-in-w32-d-00000000000000000/build/src/dom/media/platforms/wmf/MFTDecoder.cpp, line 39
108354
18:30:01 INFO - [3556] WARNING: NS_ENSURE_TRUE(SUCCEEDED(hr)) failed: file c:/builds/moz2_slave/b2g-in-w32-d-00000000000000000/build/src/dom/media/platforms/wmf/MFTDecoder.cpp, line 39
108355
18:30:01 INFO - Assertion failure: !mIsSome, at c:\builds\moz2_slave\b2g-in-w32-d-00000000000000000\build\src\obj-firefox\dist\include\mozilla/Maybe.h:385
108356
18:30:01 INFO - #01: mozilla::CanCreateWMFDecoder<CLSID_WebmMfVp9Dec> [dom/media/platforms/wmf/WMFDecoderModule.cpp:160]
108357
18:30:01 INFO - #02: mozilla::WMFDecoderModule::SupportsMimeType(nsACString_internal const &) [dom/media/platforms/wmf/WMFDecoderModule.cpp:186]
108358
18:30:01 INFO - #03: mozilla::PDMFactory::CreateDecoder(mozilla::TrackInfo const &,mozilla::FlushableTaskQueue *,mozilla::MediaDataDecoderCallback *,mozilla::layers::LayersBackend,mozilla::layers::ImageContainer *) [dom/media/platforms/PDMFactory.cpp:149]
108359
18:30:01 INFO - #04: mozilla::MediaFormatReader::EnsureDecodersCreated() [dom/media/MediaFormatReader.cpp:395]
108360
18:30:01 INFO - #05: mozilla::MediaFormatReader::HandleDemuxedSamples(mozilla::TrackInfo::TrackType,mozilla::AbstractMediaDecoder::AutoNotifyDecoded &) [dom/media/MediaFormatReader.cpp:836]
108361
18:30:01 INFO - #06: mozilla::MediaFormatReader::Update(mozilla::TrackInfo::TrackType) [dom/media/MediaFormatReader.cpp:1084]
108362
18:30:01 INFO - #07: nsRunnableMethodImpl<void ( mozilla::MediaFormatReader::*)(mozilla::TrackInfo::TrackType),1,mozilla::TrackInfo::TrackType>::Run() [xpcom/glue/nsThreadUtils.h:872]
108363
18:30:01 INFO - #08: mozilla::AutoTaskDispatcher::TaskGroupRunnable::Run() [xpcom/threads/TaskDispatcher.h:183]
108364
18:30:01 INFO - #09: mozilla::TaskQueue::Runner::Run() [xpcom/threads/TaskQueue.cpp:171]
108365
18:30:01 INFO - #10: nsThreadPool::Run() [xpcom/threads/nsThreadPool.cpp:222]
108366
18:30:01 INFO - #11: nsThread::ProcessNextEvent(bool,bool *) [xpcom/threads/nsThread.cpp:964]
108367
18:30:01 INFO - #12: NS_ProcessNextEvent(nsIThread *,bool) [xpcom/glue/nsThreadUtils.cpp:297]
108368
18:30:01 INFO - #13: mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate *) [ipc/glue/MessagePump.cpp:355]
108369
18:30:01 INFO - #14: MessageLoop::RunInternal() [ipc/chromium/src/base/message_loop.cc:234]
108370
18:30:01 INFO - #15: MessageLoop::RunHandler() [ipc/chromium/src/base/message_loop.cc:228]
108371
18:30:01 INFO - #16: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:202]
108372
18:30:01 INFO - #17: nsThread::ThreadFunc(void *) [xpcom/threads/nsThread.cpp:378]
108373
18:30:01 INFO - #18: _PR_NativeRunThread [nsprpub/pr/src/threads/combined/pruthr.c:397]
108374
18:30:01 INFO - #19: pr_root [nsprpub/pr/src/md/windows/w95thred.c:90]
108375
18:30:01 INFO - #20: MSVCR120 + 0x2c01d
108376
18:30:01 INFO - #21: MSVCR120 + 0x2c001
108377
18:30:01 INFO - #22: kernel32 + 0x53c45
108378
18:30:01 INFO - #23: ntdll + 0x637f5
108379
18:30:01 INFO - #24: ntdll + 0x637c8
Hi Benjamin,
Can you check this issue?
Component: MFBT → Audio/Video: Playback
Flags: needinfo?(bechen)
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 8•10 years ago
|
||
After discussed with jwwang, we think the |result| variable need a lock to prevent racing. It is possible that multiple MediaElement(multiple MediaFormatReader) access the variable at the same time.
| Comment hidden (Intermittent Failures Robot) |
Updated•10 years ago
|
Priority: -- → P2
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 11•10 years ago
|
||
Attachment #8683492 -
Flags: review?(jyavenard)
Comment 12•10 years ago
|
||
Comment on attachment 8683492 [details] [diff] [review]
bug-1219300-wmflock.v01.patch
LGTM. But 403 to :cpearce
Attachment #8683492 -
Flags: review?(jyavenard) → review?(cpearce)
| Assignee | ||
Comment 13•10 years ago
|
||
| Comment hidden (Intermittent Failures Robot) |
Comment 15•10 years ago
|
||
Comment on attachment 8683492 [details] [diff] [review]
bug-1219300-wmflock.v01.patch
Review of attachment 8683492 [details] [diff] [review]:
-----------------------------------------------------------------
Please include commit messages in patches that summarize what they're doing and why.
Attachment #8683492 -
Flags: review?(cpearce) → review+
| Assignee | ||
Comment 16•10 years ago
|
||
Add commit message.
r=cpearce
Assignee: nobody → bechen
Attachment #8683492 -
Attachment is obsolete: true
Attachment #8684079 -
Flags: review+
| Assignee | ||
Updated•10 years ago
|
Keywords: checkin-needed
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Comment 19•10 years ago
|
||
Keywords: checkin-needed
Comment 20•10 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox45:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
| Reporter | ||
Comment 21•10 years ago
|
||
This is still happening somewhat frequently on aurora. Should we uplift this?
Flags: needinfo?(bechen)
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 23•10 years ago
|
||
(In reply to Wes Kocher (:KWierso) from comment #21)
> This is still happening somewhat frequently on aurora. Should we uplift this?
Yes, please.
Flags: needinfo?(bechen)
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 25•10 years ago
|
||
Comment on attachment 8684079 [details] [diff] [review]
bug-1219300-wmflock.v01.patch
Approval Request Comment
[Feature/regressing bug #]: bug 1211339
[User impact if declined]: reftest failure
[Describe test coverage new/current, TreeHerder]: webm-video/object-fit-contain-webm-001.html
[Risks and why]: low
[String/UUID change made/needed]: none
Attachment #8684079 -
Flags: approval-mozilla-aurora?
Comment 26•10 years ago
|
||
Comment on attachment 8684079 [details] [diff] [review]
bug-1219300-wmflock.v01.patch
Taking it as it's fixing an intermittent test failure. Aurora44+
Attachment #8684079 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 27•10 years ago
|
||
| bugherder uplift | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•